refactor render codes